[package]
name = "voting"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
diesel = {version="2.2.12", features=["sqlite","returning_clauses_for_sqlite_3_35"]}
dotenv = "0.15.0"
itertools = "0.14.0"
minijinja = "2.11.0"
rcir = "0.3.0"
serde = {version="1.0.219", features=["derive"]}
tokio = {version="1.47.1", features=["full"]}
tower-cookies = "0.11.0"
tower-http = {version="0.6.6", features=["full"]}
